...
                .overlay(
                    RoundedRectangle(cornerRadius: 10)
                        .stroke(style: StrokeStyle(lineWidth: 1.5, dash: [5]))
                        .foregroundColor(.accentColor.opacity(0.5))
                )
                .focused($focusedField, equals: .title)
                .accessibilityIdentifier("titleField")
            
            TextEditor(text: $letter.content)
                .padding(10)
                .overlay(
                    RoundedRectangle(cornerRadius: 10)
                        .stroke(style: StrokeStyle(lineWidth: 1.5, dash: [5]))
                        .foregroundColor(.accentColor.opacity(0.5))
                    
                )
                .frame(maxHeight: .infinity)
                .focused($focusedField, equals: .content)
                .accessibilityIdentifier("contentEditor")
        }
        .padding()
        .toolbar {
            ToolbarItem(placement: .topBarTrailing) {
                Button("Done") {
                    focusedField = nil
...
