...
                        addNewLetter()
                    } label: {
                        Image("icon-composing-letter")
                            .resizable()
                            .frame(width: 25, height: 25)
                    }
                    .accessibilityIdentifier("addLetterButton")
                }
            }
            .navigationDestination(for: Letter.self) { letter in
                LetterDetailView(letter: letter)
            }
        }
...
